# media

./: CMakeLists.txt  aacencoder.cpp  aacencoder.h  audiocapturer.cpp  audiocapturer.h  dlog.cpp  dlog.h  looper.cpp  looper.h  main.cpp  mediabase.h  pushworker.cpp  pushworker.h  resampler.cpp  timesutil.h  worker.cpp  worker.h
GStreamer/Basic tutorial 3:Dynamic pipelines/: basic-tutorial-3.c
GStreamer/seek/: Makefile  main_seek.c
aac_parser/: CMakeLists.txt  main.cpp
media_codec_muxer/: CMakeLists.txt  class.md  readme.md
media_codec_muxer/src/: audiocapturer.cpp  audiocapturer.h  audioencoder.cpp  audioencoder.h  desktopcapturer.cpp  desktopcapturer.h  dlog.h  encodeddatabufferinfo.h  encoder.cpp  encoder.h  fakeaudiocapturer.cpp  fakeaudiocapturer.h  fakevideocapturer.cpp  fakevideocapturer.h  main.cpp  mediaformat.cpp  mediaformat.h  mediamuxer.cpp  mediamuxer.h  mediaworker.cpp  mediaworker.h  micaudiocapturer.cpp  micaudiocapturer.h  note.txt  rawdatabufferinfo.h  timesutil.h  videocapturer.cpp  videocapturer.h  videoencoder.cpp  videoencoder.h  worker.cpp  worker.h
rtsp-publish/: CMakeLists.txt  aacencoder.cpp  aacencoder.h  audiocapturer.cpp  avpublishtime.h  dlog.cpp  dlog.h  main.cpp  pushworker.cpp  pushworker.h  resampler.h  timesutil.h  utility.h  worker.cpp
set_up_ffmpeg/: README.md  set_up_ffmpeg.sh
simple_playback/: CMakeLists.txt  main.cpp
thread/: Makefile  main_produce_consume_sem  main_produce_consume_sem.cpp
